tests/snapshots/starburst/q17.snap
---
source: tests/explain_snapshots.rs
description: "-- 4-way star, comma-spelled, filters on two different dimensions\nSELECT c_name, p_name, l_quantity\nFROM part, orders, customer, lineitem\nWHERE l_partkey = p_partkey\n  AND l_orderkey = o_orderkey\n  AND o_custkey = c_custkey\n  AND p_size < 10\n  AND c_mktsegment = 'FURNITURE'"
expression: rendered
---
Project [#2.1, #0.1, #3.3]
  Join on=[#3.1 = #0.0]
    Join on=[#1.0 = #3.0]
      Join on=[#2.0 = #1.1]
        Filter (#2.3 = 'FURNITURE')
          Project [#2.0, #2.1, #2.3]
            Scan #2
        Project [#1.0, #1.1]
          Scan #1
      Project [#3.0, #3.1, #3.3]
        Scan #3
    Filter (#0.3 < 10)
      Project [#0.0, #0.1, #0.3]
        Scan #0
