tests/snapshots/starburst/q18.snap
---
source: tests/explain_snapshots.rs
description: "-- 5-way with a self-join through aliases (customers sharing a nation),\n-- in hostile textual order. The only corpus query where aliases matter.\nSELECT c1.c_name, c2.c_name, o1.o_orderkey\nFROM lineitem, orders AS o1, customer AS c1, customer AS c2, part\nWHERE o1.o_orderkey = l_orderkey\n  AND o1.o_custkey = c1.c_custkey\n  AND c1.c_nationkey = c2.c_nationkey\n  AND l_partkey = p_partkey\n  AND p_brand = 'Brand#55'\n  AND c2.c_acctbal < -900.0"
expression: rendered
---
Project [#2.1, #3.1, #1.0]
  Join on=[#2.2 = #3.2]
    Join on=[#1.1 = #2.0]
      Join on=[#0.0 = #1.0]
        Join on=[#4.0 = #0.1]
          Filter (#4.2 = 'Brand#55')
            Project [#4.0, #4.2]
              Scan #4
          Project [#0.0, #0.1]
            Scan #0
        Project [#1.0, #1.1]
          Scan #1
      Project [#2.0, #2.1, #2.2]
        Scan #2
    Filter (#3.4 < -900.0)
      Project [#3.1, #3.2, #3.4]
        Scan #3
