tests/snapshots/starburst/q24.snap
---
source: tests/explain_snapshots.rs
description: "-- disconnected join graph: a true cross product (tiny after filters).\n-- P2's DP must refuse cross products and fall back to greedy.\nSELECT c_name, p_name\nFROM customer, part\nWHERE c_custkey = 5 AND p_size = 33\nORDER BY c_name, p_name\nLIMIT 20"
expression: rendered
---
Project [#0.1, #1.1]
  Limit 20
    Sort [#0.1 ASC, #1.1 ASC]
      Join on=[]
        Filter (#0.0 = 5)
          Project [#0.0, #0.1]
            Scan #0
        Filter (#1.3 = 33)
          Project [#1.1, #1.3]
            Scan #1
