tests/snapshots/starburst/q25.snap
---
source: tests/explain_snapshots.rs
description: "-- kitchen sink: 5-way (orders twice via alias), selective filters,\n-- ORDER BY with unique tiebreak chain, LIMIT\nSELECT c_name, o1.o_orderdate, p_name, l_extendedprice\nFROM lineitem, orders AS o1, orders AS o2, customer, part\nWHERE l_orderkey = o1.o_orderkey\n  AND l_partkey = p_partkey\n  AND o1.o_custkey = c_custkey\n  AND o2.o_custkey = c_custkey\n  AND o2.o_totalprice > 90000.0\n  AND p_brand = 'Brand#12'\n  AND o1.o_orderdate > '1997-01-01'\nORDER BY l_extendedprice DESC, o1.o_orderkey, l_linenumber, o2.o_orderkey\nLIMIT 25"
expression: rendered
---
Project [#3.1, #1.4, #4.1, #0.4]
  Limit 25
    Sort [#0.4 DESC, #1.0 ASC, #0.2 ASC, #2.0 ASC]
      Join on=[#3.0 = #2.1]
        Join on=[#1.1 = #3.0]
          Join on=[#0.0 = #1.0]
            Join on=[#4.0 = #0.1]
              Filter (#4.2 = 'Brand#12')
                Project [#4.0, #4.1, #4.2]
                  Scan #4
              Project [#0.0, #0.1, #0.2, #0.4]
                Scan #0
            Filter (#1.4 > '1997-01-01')
              Project [#1.0, #1.1, #1.4]
                Scan #1
          Project [#3.0, #3.1]
            Scan #3
        Filter (#2.3 > 90000.0)
          Project [#2.0, #2.1, #2.3]
            Scan #2
